# ActionableNarratives

./: .gitignore  DockerReadme.md  Dockerfile  Readme.md  docker-compose.yml  dump.rdb  package_req.txt  setup_env.sh
MiniGPT-4/: analysis_llama3.py  analysis_node.py  environment.yml  test.py  test_llama3.py  vision_node_llama2.py
MiniGPT-4/eval_configs/: minigptv2_eval.yaml
MiniGPT-4/minigpt4/configs/models/: minigpt_v2.yaml
MiniGPT-4/minigpt4/conversation/: conversation.py
no_ros_computer_ws/: gpt4_vision.py  gpt4_vision_demo.py  redis_recive_test.py
ros_computer_ws/: frames.gv
ros_computer_ws/src/LLM/scripts/: do_you_c.py
ros_computer_ws/src/controll/scripts/: arm_forward.py
ros_computer_ws/src/hiwonder_simulations/hiwonder_moveit_config/launch/: trajectory_execution.launch.xml
ros_computer_ws/src/hw1_pkg/scripts/: audio_receiver.py  chat_server_test.py  controller.py  full_loop.py  livewhisper4.py
ros_computer_ws/src/relaycmd/: CMakeLists.txt  package.xml
ros_computer_ws/src/relaycmd/scripts/: image_pose_capture_service.py  livewhisper4.py  prompt_from_keyboard.py  redis_recive_drive_cmd.py  redis_recive_drive_cmd_2.py  redis_send_test.py
ros_computer_ws/src/slam/: CMakeLists.txt  map_biblo_1.pgm  map_biblo_1.yaml  package.xml
ros_computer_ws/src/slam/launch/: rviz_slam.launch
ros_robot_default_ws/: .gitignore
ros_robot_default_ws/src/hiwonder_slam/maps/: explore.pgm  explore.yaml
ros_robot_default_ws/src/xf_mic_asr_offline/audio/: vvui_deno.pcm
ros_robot_default_ws/src/xf_mic_asr_offline/config/msc/res/asr/GrmBuilld/temp/: call.g  (+1 more)
(+1 files in other folders)
